docs: Add comprehensive documentation and cleanup logs
- Add complete documentation suite for open source project
  - README.md with features and quick start
  - QUICKSTART.md for 5-minute setup guide
  - INSTALL.md with detailed installation steps
  - INTEGRATION.md with frontend integration guide
  - DEPLOYMENT.md with production deployment guide
  - CONTRIBUTING.md for contribution guidelines
  - SECURITY.md for security best practices
  - FAQ.md for common questions
  - CODE_OF_CONDUCT.md community standards
  - CHANGELOG.md version history
  - LICENSE MIT license
  - .gitignore optimized for Java/Spring Boot
- Update all GitHub URLs to point to chenshoulu202 account
- Clean up logs directory and TTS output files
- Remove sensitive and temporary files